# XWS

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md
cmd/byacc/: CMakeLists.txt
cmd/xwshost/: AST.cc  AST.hh  Bytecode.cc  Bytecode.hh  BytecodeGen.cc  CMakeLists.txt  Driver.hh  Interpreter.cc  MPS.cc  Main.cc  Main.hh  Object.cc  Object.h  Object.inl.hh  ObjectMemory.cc  ObjectMemory.hh  Parser.yy  Scanner.ll  VM.hh
lib/xwsrt/hdr/: RT.hh
